--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,30 @@
             <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
           </div>
           <div class="trail__form shadow">
-            <form action="#" class="form">
-              <input type="text" id="first-name" placeholder="First Name" />
-              <input type="text" id="last-name" placeholder="Last Name" />
-              <input type="email" id="email" placeholder="Email Address" />
-              <input type="password" id="password" placeholder="Password" />
+            <form action="#" id="form">
+              <div class="form__control">
+                <input type="text" id="firstname" placeholder="First Name" />
+                <img src="./images/icon-error.svg" alt="error-icon" />
+                <small>Error Message</small>
+              </div>
+
+              <div class="form__control">
+                <input type="text" id="lastname" placeholder="Last Name" />
+                <img src="./images/icon-error.svg" alt="error-icon" />
+                <small>Error Message</small>
+              </div>
+
+              <div class="form__control">
+                <input type="email" id="email" placeholder="Email Address" />
+                <img src="./images/icon-error.svg" alt="error-icon" />
+                <small>Error Message</small>
+              </div>
+
+              <div class="form__control">
+                <input type="password" id="password" placeholder="Password" />
+                <img src="./images/icon-error.svg" alt="error-icon" />
+                <small>Error Message</small>
+              </div>
               <button class="btn">Claim your free trial</button>
             </form>
             <div class="services">
@@ -48,5 +67,6 @@
         </div>
       </div>
     </section>
+    <script src="scripts.js"></script>
   </body>
 </html>
